manifests/base/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: capture-pods-egress
  namespace: capture
  labels:
    app.kubernetes.io/part-of: capture-framework
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: capture-framework
  egress:
    - toCIDR:
        - 192.168.1.0/24
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: notification-relay
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toFQDNs:
        - matchName: www.omdbapi.com
        - matchName: musicbrainz.org
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
